flexbox responsive align fixed

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -123,7 +123,7 @@ html {
                 .contentDiv {
                     margin-bottom: 10px;
                     padding: 10px;
-                    width: 150px;
+                    width: 250px;
                     
                     .thumbnail {
                         position: relative;
